# glitchbox

./: .env  .gitattributes  .gitignore  .gitmodules  README.md  build-run.sh  list_audio_devices.py  list_devices.sh  main.py  pyproject.toml  pyproject.txt  pyproject_backend.toml  pyproject_server.toml  refs.txt  run_depthcam.sh  setup_obs_webcam_mic.sh  start_client.sh  start_mock_server.sh  start_server.sh  test_pyaudio_devices.py
server/: config.py  connection_manager.py  main.py  pyproject.toml  requirements copy.txt  requirements.txt  util.py
server/lora_config/: angels.json  building.json  children_building.json  glitch_pixels.json  mannequin.json  megamix.json  melies.json  origami_smoke.json  robwood_sand.json  twisted_water.json
server/modules/: __init__.py  acid_audio_controller.py  image_saver.py  prompt_travel_scheduler.py  prompt_travel_scheduler_README.md  simple_beat_zoom_controller.py
server/modules/acid_processor/: __init__.py
server/modules/audio_controller/: __init__.py  beat_zoom_controller.py  lora_sound_controller.py
server/modules/audio_controller/utils/: __init__.py  audio_processing_utils.py
server/modules/bg_removal/: __init__.py  processor.py  run.py  run_custom.py  trainer.py
server/modules/depth_anything/: depth_anything_base.py  depth_anything_trt.py  depth_anything_trt_bk.py
server/modules/depth_anything/test/: test.py
server/modules/depth_anything/util/: build_engine.py  export_v1.py  export_v2.py  transform.py  trt_infer.py
server/modules/fast_srgan/: inference.py
server/modules/fast_srgan/configs/: config.yaml
server/modules/fft/: stream_analyzer.py  visualizer.py
server/modules/image_saver/: __init__.py  create_video.py  image_saver.py
server/modules/pil_upscaler/: __init__.py
server/modules/postprocessing/: pixelate.py
server/modules/prompt_scheduler/: __init__.py  prompt_scheduler.py  prompt_scheduler_README.md  prompt_travel_scheduler.py  prompt_travel_scheduler_README.md
server/modules/prompt_travel/: embeddings_service.py  prompt_travel.py  prompt_travel_README.md  prompt_travel_example.py
server/modules/upscaler/: __init__.py  example.py  factory.py  fast_srgan_processor.py  processor.py
server/modules/upscaler/processors/: dscf_sr_processor.py  (+4 more)
server/pipelines/: IPAdapterControlNetSD15.py  IPcompositionHyperSD15.py  config_BAK.py  controlnetHyperSD.py  controlnetPoseHyperSDXL.py  controlnetPoseSDTurbo.py  controlnetSDNitrot2i.py  controlnetSDTurbo.py  controlnetSDTurbot2i (current).py  controlnetSDTurbot2i (single pipe).py  controlnetSDTurbot2i (slider loras).py  controlnetSDTurbot2i copy 2.py  controlnetSDTurbot2i copy 3.py  controlnetSDTurbot2i copy.py  controlnetSDTurbot2i.py  controlnetSDTurbot2i_mock.py  controlnetTRTSDTurbot2i.py  img2imgSDTurbo.py  img2imgStreamDiffusion.py  predict.py  trtControlnetImg2Img.py
server/pipelines/BAK/: trtControlnetImg2Img copy 2.py  trtControlnetImg2Img copy 3.py  trtControlnetImg2Img copy.py
server/pipelines/config/: __init__.py
server/pipelines/diffusers_pipelines/: pipeline_controlnet.py  pipeline_controlnet_tensorrt.py  predict.py
server/pipelines/pipeline_tester/: README.md  example_custom_test.py  run_tests.sh  test_controlnet_pipeline.py
server/prompts/lora_prompts/: prompts_a_CAPTION.txt  prompts_angels.txt  prompts_building.txt  prompts_children_building.txt  prompts_glitch.txt  prompts_goldworld.txt  prompts_liquid_love.txt  prompts_mannequin copy.txt  prompts_mannequin.txt  prompts_melies_bw.txt  prompts_monoblue.txt  prompts_nature_fire.txt  prompts_nature_sand.txt  prompts_nature_smoke.txt  prompts_origami.txt  prompts_pixels.txt  prompts_psychaos.txt  prompts_robwood.txt  prompts_twisted_bodies.txt
server/prompts/lora_prompts_BAK/: prompts_a_OG.txt  prompts_angels copy 2.txt  prompts_angels copy.txt  prompts_glitch.txt  prompts_glitch_reddish.txt  prompts_megamix.txt  prompts_melies_bw.txt  prompts_melies_col.txt  prompts_nature_water.txt  prompts_other.txt  prompts_pixels.txt
server/tensorrt_convert/: convert_all_models.py  onnx_to_trt.py  utilities.py
server/tensorrt_convert/BAK/: sd_to_onnx copy 2.py  sd_to_onnx copy.py
server/tensorrt_convert/checkpoints/: config.json
server/test/: bg_remove.py  compare_upscalers.py  example_upscale.py  pil_upscaler.py  pytorch_upscaler.py  test_ground.py  upscale.py  zmq_publisher.py  zmq_subscriber.py
server/utils/: LICENSE  audio_detector.py  compression_helpers.py  create_virtual_audio_device.sh  dynamic_processor.py  fft_analyzer.py  find_audio_sources.sh  find_virtual_device.py  frame_interpolation.py  image_utils.py  input_image.py  navier_stokes.py  optical_flow.py  oscillators.py  posteffect.py  prompt_provider.py  segmentation_detection.py  test_oscillators.py  test_sd.py  test_virtual_audio.py  virtual_audio_device.py  virtual_audio_mixer.py  wobblers.py
(+57 files in other folders)
