[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "colored>=2.3.0",
    "compel>=2.0.3",
    "controlnet-aux>=0.0.9",
    "cuda-python>=12.8.0",
    "diffusers>=0.32.2",
    "fastapi[standard]>=0.115.11",
    "huggingface-hub>=0.29.3",
    "llvmlite==0.44.0",
    "lunar-tools>=0.0.11",
    "markdown2>=2.5.3",
    "ninja>=1.11.1.3",
    "numba==0.61.0",
    "onnx-graphsurgeon>=0.3.27",
    "onnxruntime>=1.21.0",
    "optimum>=1.24.0",
    "peft>=0.15.0",
    "polygraphy>=0.49.20",
    "pyaudio>=0.2.14",
    "pycuda>=2025.1",
    "rembg>=2.0.65",
    "setuptools>=77.0.3",
    "transformers>=4.49.0",
    "uvicorn[standard]>=0.34.0",
    "tensorrt>=10.9.0.34",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "xformers>=0.0.29.post3",
    "triton>=3.2.0",
    "oneflow>=0.9.1.dev20231222",
    "onediff>=1.2.1.dev46",
    "onnxruntime-gpu>=1.21.1",
    "super-image>=0.1.7",
]

[tool.uv.sources]
oneflow = { url = "https://github.com/siliconflow/oneflow_releases/releases/download/community_cu122/oneflow-0.9.1.dev20231222+cu122-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
onediff = { git = "https://github.com/siliconflow/onediff.git", rev = "main" }
lunar-tools = { git = "https://github.com/lunarring/lunar_tools" }
