[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.15",
    "colored>=2.3.0",
    "ctranslate2==4.4.0",
    "fastapi[standard]>=0.110.3",
    "markdown2>=2.5.3",
    "ninja>=1.11.1.3",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyqt6==6.6.1",
    "pyqt6-qt6==6.6.1",
    "pyqt6-sip==13.6.0",
    "pyside6==6.6.1",
    "python-dotenv>=1.1.0",
    "python-multipart==0.0.6",
    "realtimestt==0.3.98",
    "requests>=2.32.3",
    "scipy==1.15.1",
    "sounddevice>=0.5.1",
    "uvicorn==0.24.0",
    "uvloop>=0.21.0",
    "websockets==14.2",
]
