[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.30.1",
    "compel==2.0.2",
    "controlnet-aux==0.0.9",
    "diffusers==0.28.2",
    "fastapi==0.111.0",
    "huggingface-hub==0.24.0",
    "markdown2>=2.5.3",
    "mpmath==1.3.0",
    "numpy==1.*",
    "onediff ; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "oneflow ; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "peft==0.11.1",
    "pillow==10.3.0",
    "safetensors>=0.5.3",
    "setuptools>=75.8.2",
    "stable-fast ; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "torch==2.2.2",
    "transformers==4.41.1",
    "uvicorn[standard]==0.30.0",
    "xformers>=0.0.25.post1 ; platform_machine != 'arm64' or sys_platform != 'darwin'",
]

[tool.uv.sources]
stable-fast = { url = "https://github.com/chengzeyi/stable-fast/releases/download/v1.0.5/stable_fast-1.0.5+torch222cu121-cp310-cp310-manylinux2014_x86_64.whl" }
oneflow = { url = "https://github.com/siliconflow/oneflow_releases/releases/download/community_cu121/oneflow-0.9.1.dev20240515+cu121-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
onediff = { git = "https://github.com/siliconflow/onediff.git", rev = "main" }
